tests-integration/tests/roundtrip/invalid/semantic/typecheck/mismatched_equality_int_bool/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/mismatched_equality_int_bool/input.essence:3:15:
  |
3 | such that x = b
  |               ^
Type error:
	Expected: int
	Got: bool

